--- a/index.html
+++ b/index.html
@@ -70,5 +70,60 @@ nazwisko&nbsp;ucznia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp; imię&nb
 Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJan
 <!-Jan Bucia ->
 <body bgcolor="gold"></body>
+
+<br><br><br>
+<h4><font color="blue">Części komputera to:</h4>
+<UL TYPE=circle> 
+<LI>procesory;
+<LI>płyty główne;
+<LI>pamięci RAM;
+</UL> 
+
+<UL TYPE=disc> 
+<LI>dyski;
+<LI>napędy optyczne;
+<LI>karty video;
+</UL> 
+
+<UL TYPE=square> 
+<LI>karty muzyczne;
+<LI>karty graficzne;
+<LI>obudowa;
+</UL> 
+
+<h4><font color="green">Wielkości pamięci:</h4>
+<OL TYPE=A START=3> 
+<LI>Kilobit  
+<LI>Megabit
+<LI>Gigabit 
+</OL> 
+<h4><font color="green">Rodzaje złącz:</h4>
+<OL TYPE=I START=3> 
+<LI>VGA;
+<LI>PS/2;
+<LI>DVI;
+<h4><font color="green">Rodzaje USB:</h4>
+<OL TYPE=a START=3> 
+<LI>1.0;
+<LI>2.0;
+<LI>3.0;
+</OL>
+
+<br><font color="red">
+<OL> 
+<LI> Rodzaje drukarek:
+<OL type=I> 
+<LI> atramentowa;
+<LI> laserowa;
+<LI> igłowa;
+</OL>
+<LI> Do komputera można podłączyć:
+<OL type=A> 
+<LI> Monitor
+<OL type=a>
+<LI> z lampą kineskopową
+<LI> LCD
+</OL>
+</OL>
 </body>
 </html>
