--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@ Jan Bucia
 <p> x<sup>*</sup>x=x<sup>2</sup> </p>
 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-<H1 ALIGN=center> <font color="black"> Żart o języku angielskim </H1>
+<H1 ALIGN=center> <font color="black"> Żart o języku obcym </H1>
 <FIELDSET>
 <LEGEND> Dlaczego? </LEGEND>
 - Marian, co to znaczy WHY? <br>
 - Dlaczego.<br>
 - A tak tylko się pytam ... <br>
 </FIELDSET>
+  
+ <IMG SRC="flagi.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
 
 <HR SIZE=2 WIDTH=70% ALIGN=CENTER COLOR=black>
 <H3 ALIGN=left> <font color="green"> Żart o uczniu w szkole </H3>
