--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Jan Bucia
 - Marian, co to znaczy WHY? <br>
 - Dlaczego.<br>
 - A tak tylko się pytam ... <br>
-   <IMG SRC="flagi.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
+   <IMG SRC="flagi.gif" ALIGN=right BORDER=39 WIDTH=129 HEIGHT=107 ALT="grafika1-Bucia">
 </FIELDSET>
   
 <HR SIZE=2 WIDTH=70% ALIGN=CENTER COLOR=black>
