--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Jan Bucia
 - Marian, co to znaczy WHY? <br>
 - Dlaczego.<br>
 - A tak tylko się pytam ... <br>
-<IMG SRC="flagi.gif" ALIGN=right BORDER=39 WIDTH=129 HEIGHT=107 ALT="grafika1-Bucia">
+<IMG SRC="uk-union-jack-flag-waving-animated-gif-16.gif" ALIGN=right BORDER=39 WIDTH=129 HEIGHT=107 ALT="grafika1-Bucia">
 <IMG SRC="comment_joeJ0jYZTuBUe64gl44KHfuqIOLl9E4R.gif" ALIGN=left BORDER=15 WIDTH=105 HEIGHT=105 ALT="grafika2-Bucia">
 </FIELDSET>
   
