--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Jan Bucia
 - Dlaczego.<br>
 - A tak tylko się pytam ... <br>
 <IMG SRC="Polska.gif" ALIGN=right BORDER=39 WIDTH=129 HEIGHT=107 ALT="grafika1-Bucia">
-<IMG SRC="comment_joeJ0jYZTuBUe64gl44KHfuqIOLl9E4R.gif" ALIGN=left BORDER=15 WIDTH=105 HEIGHT=105 ALT="grafika2-Bucia">
+<IMG SRC="Angielski.gif" ALIGN=left BORDER=15 WIDTH=105 HEIGHT=105 ALT="grafika2-Bucia">
 </FIELDSET>
   
 <HR SIZE=2 WIDTH=70% ALIGN=CENTER COLOR=black>
@@ -58,6 +58,8 @@ Nauczyciel mówi do ucznia: <br>
 - Adama Małysza. <br>
 - A gdzie on jest? <br>
 - Poleciał. <br>
+  <IMG SRC="Rysunek.gif" ALIGN=right BORDER=17 WIDTH=107 HEIGHT=129 ALT="grafika3-Bucia">
+    <IMG SRC="Malunek.gif" ALIGN=left BORDER=15 WIDTH=105 HEIGHT=105 ALT="grafika4-Bucia">
 </FIELDSET>
 
 <HR SIZE=6 WIDTH=100% ALIGN=RIGHT COLOR=pink>
@@ -67,6 +69,7 @@ Nauczyciel mówi do ucznia: <br>
 Rozmowa żony z mężem. <br>
 - Kochanie, zamknij proszę okno - mówi żona do męża - informatyka.<br>
 - Sama sobie wciśnij Alt+F4! <br>
+  <IMG SRC="Komputer.gif" ALIGN=right BORDER=13 WIDTH=103 HEIGHT=103 ALT="grafika5-Bucia">
 </FIELDSET>
 nazwisko&nbsp;ucznia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp; imię&nbsp;ucznia <br>
 Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJan
