--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <title> Jan Bucia </title>
 </head>
+  <A HREF="Poczta_Bucia.html"> Link do poczty </A>
 <body>
 Jan Bucia
 <p align="right"> <font color="pink" size="7" face="Arial"> Jan </font> </p> <br>
