--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <meta charset="utf-8">
 <title> Jan Bucia </title>
 </head>
-  <A HREF="Poczta_Bucia.html"> Link do poczty </A>
 <body>
+<a name="Plik_Bucia"></a> 
+<a href="#skok_plik">Kliknij aby skoczyć do plik</a>
 Jan Bucia
 <p align="right"> <font color="pink" size="7" face="Arial"> Jan </font> </p> <br>
 <p align="right"> <font color="yellow" size="6" face="Arial"> Jan </font> </p> <br>
