--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <title> Jan Bucia </title>
 </head>
 <body>
-<a name="Plik_Bucia"></a> 
-<a href="#skok_plik">Kliknij aby skoczyć do plik</a>
+<a name="Plik_Bucia"></a> <br>
+<a href="#skok_plik">Kliknij aby skoczyć do plik</a> <br>
+  <a name="Poczta_Bucia"></a> <br>
+<a href="#skok_poczta">Kliknij aby skoczyć do poczty</a> <br>
 Jan Bucia
 <p align="right"> <font color="pink" size="7" face="Arial"> Jan </font> </p> <br>
 <p align="right"> <font color="yellow" size="6" face="Arial"> Jan </font> </p> <br>
