--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <a name="Plik_Bucia"></a> <br>
-<a href="#skok_plik">Kliknij aby skoczyć do plik</a> <br>
+<a href="#Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a name="Poczta_Bucia"></a> <br>
-<a href="#skok_poczta">Kliknij aby skoczyć do poczty</a> <br>
+<a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
 <a name="Formularz_Bucia"></a> <br>
-<a href="#skok_formularz">Kliknij aby skoczyć do formualarza</a> <br>
+<a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
 <a name="Tabela_Bucia"></a> <br>
-<a href="#skok_tabela">Kliknij aby skoczyć do tabeli</a> <br>
+<a href="Tabekla_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
 Jan Bucia
 <p align="right"> <font color="pink" size="7" face="Arial"> Jan </font> </p> <br>
 <p align="right"> <font color="yellow" size="6" face="Arial"> Jan </font> </p> <br>
