--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <a name="Plik_Bucia"></a> <br>
-<a href="#Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
+<a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a name="Poczta_Bucia"></a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
 <a name="Formularz_Bucia"></a> <br>
