--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a name="Formularz_Bucia"></a> <br>
 <a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
 <a name="Tabela_Bucia"></a> <br>
-<a href="Tabekla_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
+<a href="Tabela_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
 Jan Bucia
 <p align="right"> <font color="pink" size="7" face="Arial"> Jan </font> </p> <br>
 <p align="right"> <font color="yellow" size="6" face="Arial"> Jan </font> </p> <br>
