--- a/Poczta_Bucia.html
+++ b/Poczta_Bucia.html
@@ -3,10 +3,10 @@
 	<html>
 		<head>
 		<meta charset="utf-8">
-			<title> Jan Bucia </title>
+			<title> Poczta </title>
 		</head>
 		<body>
 		Jan Bucia
-		<A HREF="poczta_Bucia.html"> wroc </A>
+		<A HREF="index.html"> wroc </A>
 		</body>
 	</html>
