--- a/index.html
+++ b/index.html
@@ -82,8 +82,17 @@ Rozmowa żony z mężem. <br>
 nazwisko&nbsp;ucznia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp; imię&nbsp;ucznia <br>
 Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJan
 <!-Jan Bucia ->
-<body bgcolor="gold"></body>
-
+  <body bgcolor="gold"></body>
+  
+  <a name="Plik_Bucia"></a> <br>
+<a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
+<a name="Poczta_Bucia"></a> <br>
+<a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
+<a name="Formularz_Bucia"></a> <br>
+<a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
+<a name="Tabela_Bucia"></a> <br>
+<a href="Tabela_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
+  
 <br><br><br>
 <h4><font color="blue">Części komputera to:</h4>
 <UL TYPE=circle> 
@@ -139,4 +148,12 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 </OL>
 </OL>
 </body>
+  <a name="Plik_Bucia"></a> <br>
+<a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
+<a name="Poczta_Bucia"></a> <br>
+<a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
+<a name="Formularz_Bucia"></a> <br>
+<a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
+<a name="Tabela_Bucia"></a> <br>
+<a href="Tabela_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
 </html>
