--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title> Jan Bucia </title>
 </head>
 <body>
+<a name="skok_srodek"></a>
+<a href="#skok_srodek">Kliknij aby skoczyć do środka strony</a>
 <a name="Plik_Bucia"></a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a name="Poczta_Bucia"></a> <br>
