--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 </OL>
 </OL>
 </body>
-  <a name="skok_poczatek"></a>
-<a href="#skok_poczatek">kliknij aby skoczyć na początek tekstu</a>
+<a href="#Początek">Kliknij aby skoczyć na początek tekstu</a>
   <a name="Plik_Bucia"></a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a name="Poczta_Bucia"></a> <br>
