--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 </OL>
 </OL>
 </body>
-<a href="#Początek">Kliknij aby skoczyć na początek tekstu</a>
-  <a name="Plik_Bucia"></a> <br>
+<a name="Koniec"></a> 
+<a href="#Początek">Kliknij aby skoczyć do początku strony</a>
+<a href="#Środek">Kliknij aby skoczyć do środka strony</a>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a name="Poczta_Bucia"></a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
