--- a/index.html
+++ b/index.html
@@ -150,14 +150,11 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 </OL>
 </OL>
 </body>
-<a name="Koniec"></a> 
-<a href="#Początek">Kliknij aby skoczyć do początku strony</a>
-<a href="#Środek">Kliknij aby skoczyć do środka strony</a>
+  <a name="punkt_koniec"><u>Środek strony:</u></a><br> 
+<a href="#punkt_początek">Kliknij aby skoczyć do początku strony</a> <br>
+<a href="#punkt_środek">Kliknij aby skoczyć do środka strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
-<a name="Poczta_Bucia"></a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
-<a name="Formularz_Bucia"></a> <br>
 <a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
-<a name="Tabela_Bucia"></a> <br>
 <a href="Tabela_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
 </html>
