--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 </OL>
 </OL>
 </body>
-  <a name="punkt_koniec"><u>Środek strony:</u></a><br> 
+<a name="punkt_koniec"></a><br> 
 <a href="#punkt_początek">Kliknij aby skoczyć do początku strony</a> <br>
 <a href="#punkt_środek">Kliknij aby skoczyć do środka strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
