--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
 <title> Jan Bucia </title>
 </head>
 <body>
-<a name="skok_srodek"></a>
-<a href="#skok_srodek">Kliknij aby skoczyć do środka strony</a>
-<a name="Plik_Bucia"></a> <br>
+<a name="punkt_początek"></a><br> 
+<a href="#punkt_środek">Kliknij aby skoczyć do początku strony</a> <br>
+<a href="#punkt_koniec">Kliknij aby skoczyć do środka strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
-<a name="Poczta_Bucia"></a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
-<a name="Formularz_Bucia"></a> <br>
 <a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
-<a name="Tabela_Bucia"></a> <br>
 <a href="Tabela_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
 Jan Bucia
 <p align="right"> <font color="pink" size="7" face="Arial"> Jan </font> </p> <br>
@@ -86,13 +83,12 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 <!-Jan Bucia ->
   <body bgcolor="gold"></body>
   
-  <a name="Plik_Bucia"></a> <br>
+<a name="punkt_środek"></a><br> 
+<a href="#punkt_początek">Kliknij aby skoczyć do początku strony</a> <br>
+<a href="#punkt_koniec">Kliknij aby skoczyć do środka strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
-<a name="Poczta_Bucia"></a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
-<a name="Formularz_Bucia"></a> <br>
 <a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
-<a name="Tabela_Bucia"></a> <br>
 <a href="Tabela_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
   
 <br><br><br>
