--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <a name="punkt_początek"></a><br> 
-<a href="#punkt_środek">Kliknij aby skoczyć do początku strony</a> <br>
-<a href="#punkt_koniec">Kliknij aby skoczyć do środka strony</a> <br>
+<a href="#punkt_środek">Kliknij aby skoczyć do środka strony</a> <br>
+<a href="#punkt_koniec">Kliknij aby skoczyć do końca strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
 <a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
@@ -85,7 +85,7 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   
 <a name="punkt_środek"></a><br> 
 <a href="#punkt_początek">Kliknij aby skoczyć do początku strony</a> <br>
-<a href="#punkt_koniec">Kliknij aby skoczyć do środka strony</a> <br>
+<a href="#punkt_koniec">Kliknij aby skoczyć na koniec strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
 <a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
