--- a/index.html
+++ b/index.html
@@ -51,7 +51,25 @@ Jan Bucia
 - Dlaczego.<br>
 - A tak tylko się pytam ... <br>
 <IMG SRC="Polska.gif" ALIGN=right BORDER=39 WIDTH=129 HEIGHT=107 ALT="grafika1-Bucia">
-<IMG SRC="Angielski.gif" ALIGN=left BORDER=15 WIDTH=105 HEIGHT=105 ALT="grafika2-Bucia">
+<IMG SRC="rysun.gif"> 
+<p><IMG SRC="Angielski.gif" ALIGN=TOP>top top top top top top top top top top top 
+top top top top top top top top top top top top top top top top top top top 
+top top top top top top top top top top top top top top top top top top top 
+top top top top top top top top top top top top top top top top top top top 
+<p><IMG SRC="Angielski.gif" ALIGN=middle>middle middle middle middle middle middle 
+middle middle middle middle middle middle middle middle middle middle middle 
+middle middle middle middle middle middle middle middle middle middle middle 
+middle middle middle middle middle middle middle middle middle middle middle 
+middle middle middle middle middle 
+<p><IMG SRC="Angielski.gif" ALIGN=bottom>bottom bottom bottom bottom bottom bottom 
+bottom bottom bottom bottom bottom bottom bottom bottom bottom bottom bottom 
+bottom bottom bottom bottom bottom bottom bottom bottom bottom bottom bottom 
+bottom bottom bottom bottom bottom bottom bottom bottom bottom bottom bottom 
+bottom bottom bottom bottom bottom bottom bottom bottom bottom bottom bottom 
+<IMG SRC="Angielski.gif" ALIGN=left BORDER=15>
+<IMG SRC="Angielski.gif" ALIGN=right BORDER=3>
+<IMG SRC="Angielski.gif" width=80 height=114 ALT="komputery">
+<IMG SRC="Angielski.gif" ALIGN=right BORDER=3 WIDTH=200 HEIGHT=300 ALT="grafika">
 </FIELDSET>
   
 <HR SIZE=2 WIDTH=70% ALIGN=CENTER COLOR=black>
