--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title> Jan Bucia </title>
 </head>
 <body>
-<a name="punkt_poczatek"></a><br> 
-<a href="#punkt_srodek">Kliknij aby skoczyć do środka strony</a> <br>
+<a name="punkt_początek"></a><br> 
+<a href="#punkt_środek">Kliknij aby skoczyć do środka strony</a> <br>
 <a href="#punkt_koniec">Kliknij aby skoczyć do końca strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
@@ -101,8 +101,8 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 <!-Jan Bucia ->
   <body bgcolor="gold"></body>
   
-<a name="punkt_srodek"></a><br> 
-<a href="#punkt_poczatek">Kliknij aby skoczyć do początku strony</a> <br>
+<a name="punkt_środek"></a><br> 
+<a href="#punkt_początek">Kliknij aby skoczyć do początku strony</a> <br>
 <a href="#punkt_koniec">Kliknij aby skoczyć na koniec strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
@@ -165,8 +165,8 @@ Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 </OL>
 </body>
 <a name="punkt_koniec"></a><br> 
-<a href="#punkt_poczatek">Kliknij aby skoczyć do początku strony</a> <br>
-<a href="#punkt_srodek">Kliknij aby skoczyć do środka strony</a> <br>
+<a href="#punkt_początek">Kliknij aby skoczyć do początku strony</a> <br>
+<a href="#punkt_środek">Kliknij aby skoczyć do środka strony</a> <br>
 <a href="Plik_Bucia.html">Kliknij aby skoczyć do plik</a> <br>
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
 <a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
