--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Jan Bucia
 
 <b> <i> <p> <align="left">80-402 Gdańsk Adama Mickiewicza 80/2</p> </i> <br>
 <p> <align="right"> <font color="red" size="3" face="Times New Roman"> Ulubiony aktor: Cezary Pazura </font> </p> <br> </b>
-<p> <center> <u> <font color="yellow" size="4" face="Arial"> Ulubiony zespół muzyczny: Dżem</u> </p> </center> <br>
+<p> <center> <u> <font color="orange" size="4" face="Arial"> Ulubiony zespół muzyczny: Dżem</u> </p> </center> <br>
 <p> <align="right"> <strike> <font color="green" size="6" face="Courier New"> 26 maja 2006 </font> </p> </strike> <br>
 <p> <font color="purple"> H<sub>2</sub>SO<sub>4</sub> </p>
 <p> x<sup>*</sup>x=x<sup>2</sup> </p>
