--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title> Jan Bucia </title>
 </head>
 <body>
+<br> Walidacja HTML to proces, w którym narzędzie (walidator) sprawdza poprawność kodu pod kątem błędów składniowych. Testuje również zgodność ze specyfikacją użytego języka. Jest to szczególnie ważny etap, ponieważ może zdarzyć się, że np. niedomknięty znacznik spowoduje niepoprawne wyświetlanie zawartości strony. <br>
 <a name="punkt_początek"></a><br> 
 <a href="#punkt_środek">Kliknij aby skoczyć do środka strony</a> <br>
 <a href="#punkt_koniec">Kliknij aby skoczyć do końca strony</a> <br>
