--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ Rozmowa żony z mężem. <br>
 - Sama sobie wciśnij Alt+F4! <br>
   <IMG SRC="Komputer.gif" ALIGN=right BORDER=13 WIDTH=103 HEIGHT=103 ALT="grafika5-Bucia">
 </FIELDSET>
-nazwisko&nbsp;ucznia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp; imię&nbsp;ucznia <br>
-Bucia&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJan
+nazwisko&nbsp;ucznia&nbsp; imię&nbsp;ucznia <br>
+Bucia                                                                                                                                  Jan
 <!-Jan Bucia ->
   <body bgcolor="gold"></body>
   
