--- a/Formularz_Bucia.html
+++ b/Formularz_Bucia.html
@@ -3,10 +3,11 @@
 	<html>
 		<head>
 		<meta charset="utf-8">
-			<title> Formularz </title>
+			<title> walidacja </title>
 		</head>
 		<body>
-		Jan Bucia
-		<A HREF="index.html"> wroc </A>
+<IMG SRC="blad_Bucia.jpg" ALIGN=left BORDER=15>
+<IMG SRC="poprawa_Bucia.jpg" ALIGN=right BORDER=3>
+		<p><A HREF="index.html"> wroc </A></p>
 		</body>
 	</html>
