--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <a href="Poczta_Bucia.html">Kliknij aby skoczyć do poczty</a> <br>
 <a href="Formularz_Bucia.html">Kliknij aby skoczyć do formualarza</a> <br>
 <a href="Tabela_Bucia.html">Kliknij aby skoczyć do tabeli</a> <br>
+<a href="Walidacja_Bucia.html">Kliknij aby skoczyć do walidacji</a> <br>
 Jan Bucia
 <p align="right"> <font color="pink" size="7" face="Arial"> Jan </font> </p> <br>
 <p align="right"> <font color="yellow" size="6" face="Arial"> Jan </font> </p> <br>
