--- a/Walidacja_Bucia.html
+++ b/Walidacja_Bucia.html
@@ -6,7 +6,8 @@
 			<title> walidacja </title>
 		</head>
 		<body>
-		Jan Bucia
-		<A HREF="index.html"> wroc </A>
+<IMG SRC="blad_Bucia.jpg" ALIGN=left BORDER=15>
+<IMG SRC="poprawa_Bucia.jpg" ALIGN=right BORDER=3>
+		<p><A HREF="index.html"> wroc </A></p>
 		</body>
 	</html>
