--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -6,7 +6,50 @@
 			<title> Tabela </title>
 		</head>
 		<body>
-		Jan Bucia
+		<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Tabela HTML</title>
+</head>
+<body>
+<table border=2>
+<caption>Tytuł tabela HTML</caption>
+<thead>
+<tr>
+<th>Kolumna 1</th>
+<th>Kolumna 2</th>
+<th>Kolumna 3</th>
+<th>Kolumna 4</th>
+<th>Kolumna 5</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Komórka 1</td>
+<td>Komórka 2</td>
+<td>Komórka 3</td>
+<td>Komórka 4</td>
+<td>Komórka 5</td>
+</tr>
+<tr>
+<td>Komórka 6</td>
+<td>Komórka 7</td>
+<td>Komórka 8</td>
+<td>Komórka 9</td>
+<td>Komórka 10</td>
+</tr>
+<tr>
+<td>Komórka 11</td>
+<td>Komórka 12</td>
+<td>Komórka 13</td>
+<td>Komórka 14</td>
+<td>Komórka 15</td>
+</tr>
+</tbody>
+</table>
+</body>
+</html>
 		<A HREF="index.html"> wroc </A>
 		</body>
 	</html>
