--- a/Walidacja_Bucia.html
+++ b/Walidacja_Bucia.html
@@ -6,6 +6,8 @@
 			<title> walidacja </title>
 		</head>
 		<body>
+<p> Walidacja HTML to proces, w którym narzędzie (walidator) sprawdza poprawność kodu pod kątem błędów składniowych. Testuje również zgodność ze specyfikacją użytego języka. Jest to szczególnie ważny etap, ponieważ może zdarzyć się, że np. niedomknięty znacznik spowoduje niepoprawne wyświetlanie zawartości strony. </p>
+<p> Walidator to program sprawdzający poprawność dokumentu o określonej składni. </p>
 <IMG SRC="blad_Bucia.jpg" ALIGN=left BORDER=15>
 <IMG SRC="poprawa_Bucia.jpg" ALIGN=right BORDER=3>
 		<p><A HREF="index.html"> wroc </A></p>
