--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -10,7 +10,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Tabela HTML</title>
+<th><title>Dane komputerowe -Jan Bucia 2G</title></th>
 </head>
 <body>
 <table border=2>
