--- a/Formularz_Bucia.html
+++ b/Formularz_Bucia.html
@@ -6,8 +6,7 @@
 			<title> walidacja </title>
 		</head>
 		<body>
-<IMG SRC="blad_Bucia.jpg" ALIGN=left BORDER=15>
-<IMG SRC="poprawa_Bucia.jpg" ALIGN=right BORDER=3>
+			Jan Bucia
 		<p><A HREF="index.html"> wroc </A></p>
 		</body>
 	</html>
