--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <table border=2>
-<caption>Tytuł tabela HTML</caption>
+<caption>Dane komputerowe - Jan Bucia 2G</caption>
 <thead>
 <tr>
 <th>Kolumna 1</th>
