--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -17,11 +17,11 @@
 <caption>Dane komputerowe - Jan Bucia 2G</caption>
 <thead>
 <tr>
-<th>Kolumna 1</th>
-<th>Kolumna 2</th>
-<th>Kolumna 3</th>
-<th>Kolumna 4</th>
-<th>Kolumna 5</th>
+<th>Rodzaj procesora</th>
+<th>KFormat</th>
+<th>Chipset</th>
+<th>Gniazdo</th>
+<th>Max RAM</th>
 </tr>
 </thead>
 <tbody>
