--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <table border=2>
-<caption>Dane komputerowe - Jan Bucia 2G</caption>
+	<th><caption>Dane komputerowe - Jan Bucia 2G</caption></yh>
 <thead>
 <tr>
 <th>Rodzaj procesora</th>
