--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <table border=2>
-	<th><caption>Dane komputerowe - Jan Bucia 2G</caption></yh>
+<th><caption>Dane komputerowe - Jan Bucia 2G</caption></th>
 <thead>
 <tr>
 <th>Rodzaj procesora</th>
