--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -26,25 +26,39 @@
 </thead>
 <tbody>
 <tr>
-<td>Komórka 1</td>
-<td>Komórka 2</td>
-<td>Komórka 3</td>
-<td>Komórka 4</td>
-<td>Komórka 5</td>
+<td>ASRock H670</td>
+<td>ATX</td>
+<td>Intel H670</td>
+<td>Socket 1700</td>
+<td>128 GB</td>
 </tr>
 <tr>
-<td>Komórka 6</td>
-<td>Komórka 7</td>
-<td>Komórka 8</td>
-<td>Komórka 9</td>
-<td>Komórka 10</td>
+<td>ASRock B550 Pro4</td>
+<td>ATX</td>
+<td>AMD B550</td>
+<td>Socket AM4</td>
+<td>128 GB</td>
 </tr>
 <tr>
-<td>Komórka 11</td>
-<td>Komórka 12</td>
-<td>Komórka 13</td>
-<td>Komórka 14</td>
-<td>Komórka 15</td>
+<td>ASRock H310CM-DVS</td>
+<td>mATX</td>
+<td>Intel H310</td>
+<td>Socket 1151</td>
+<td>32 GB</td>
+</tr>
+<tr>
+<td>ASRock H510CM-HDV</td>
+<td>mATX</td>
+<td>Intel H510</td>
+<td>Socket 1200</td>
+<td>64 GB</td>
+</tr>
+<tr>
+<td>ASRock Z590M-Pro4</td>
+<td>mATX</td>
+<td>Intel Z590</td>
+<td>Socket 1200</td>
+<td>128 GB</td>
 </tr>
 </tbody>
 </table>
