--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -13,6 +13,7 @@
 <th><title>Dane komputerowe -Jan Bucia 2G</title></th>
 </head>
 <body>
+<table style="border:6px solid red;border-collapse: collapse;">
 <table border=2>
 <th><caption>Dane komputerowe - Jan Bucia 2G</caption></th>
 <thead>
