--- a/Tabela_Bucia.html
+++ b/Tabela_Bucia.html
@@ -7,6 +7,15 @@
 		</head>
 		<body>
 		<!DOCTYPE html>
+<!DOCTYPE html>
+	<html lang="pl-PL">
+	<html>
+		<head>
+		<meta charset="utf-8">
+			<title> Tabela </title>
+		</head>
+		<body>
+		<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -14,7 +23,7 @@
 </head>
 <body>
 <table style="border:6px solid red;border-collapse: collapse;">
-<table border=2>
+<table border=2 bordercolor="red">
 <th><caption>Dane komputerowe - Jan Bucia 2G</caption></th>
 <thead>
 <tr>
@@ -26,40 +35,40 @@
 </tr>
 </thead>
 <tbody>
-<tr>
-<td>ASRock H670</td>
-<td>ATX</td>
-<td>Intel H670</td>
-<td>Socket 1700</td>
-<td>128 GB</td>
+<tr bgcolor="green">
+<td><font color="white">ASRock H670</font></td>
+<td><font color="yellow">ATX</font></td>
+<td><font color="white">Intel H670</font></td>
+<td><font color="yellow">Socket 1700</font></td>
+<td bgcolor="yellow">128 GB</font></td>
 </tr>
-<tr>
-<td>ASRock B550 Pro4</td>
-<td>ATX</td>
-<td>AMD B550</td>
-<td>Socket AM4</td>
-<td>128 GB</td>
+<tr bgcolor="green">
+<td><font color="white">ASRock B550 Pro4</font></td>
+<td><font color="yellow">ATX</font></td>
+<td><font color="white">AMD B550</font></td>
+<td><font color="yellow">Socket AM4</font></td>
+<td bgcolor="yellow">128 GB</font></td>
 </tr>
-<tr>
-<td>ASRock H310CM-DVS</td>
-<td>mATX</td>
-<td>Intel H310</td>
-<td>Socket 1151</td>
-<td>32 GB</td>
+<tr bgcolor="green">
+<td><font color="white">ASRock H310CM-DVS</font></td>
+<td><font color="yellow">mATX</font></td>
+<td><font color="white">Intel H310</font></td>
+<td><font color="yellow">Socket 1151</font></td>
+<td bgcolor="yellow">32 GB</td>
 </tr>
-<tr>
-<td>ASRock H510CM-HDV</td>
-<td>mATX</td>
-<td>Intel H510</td>
-<td>Socket 1200</td>
-<td>64 GB</td>
+<tr bgcolor="green">
+<td><font color="white">ASRock H510CM-HDV</font></td>
+<td><font color="yellow">mATX</font></td>
+<td><font color="white">Intel H510</font></td>
+<td><font color="yellow">Socket 1200</font></td>
+<td bgcolor="yellow">64 GB</td>
 </tr>
-<tr>
-<td>ASRock Z590M-Pro4</td>
-<td>mATX</td>
-<td>Intel Z590</td>
-<td>Socket 1200</td>
-<td>128 GB</td>
+<tr bgcolor="green">
+<td><font color="white">ASRock Z590M-Pro4</font></td>
+<td><font color="yellow">mATX</font></td>
+<td><font color="white">Intel Z590</font></td>
+<td><font color="yellow">Socket 1200</font></td>
+<td bgcolor="yellow">128 GB</td>
 </tr>
 </tbody>
 </table>
@@ -68,3 +77,4 @@
 		<A HREF="index.html"> wroc </A>
 		</body>
 	</html>
+		
